fix issue with tab1 being too large

--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,6 @@ a {color: white; text-decoration: none;}
     text-align: left;
     padding-inline: 60px;
     min-height: 100vh;
-    min-width: 100%;
     font-size: 2rem;
     color: white;
     background-image: url('../images/bakery.jpg');
